--- a/skateboard/src/main/resources/application.properties
+++ b/skateboard/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 hibernate.show_sql: true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.root=DEBUG
