--- a/skateboard/src/main/resources/application.properties
+++ b/skateboard/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #logging.level.root=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
+
+
+security.basic.enabled=true
+security.user.name=ranjana
+security.user.password=ranjana123
