--- a/skateboard/pom.xml
+++ b/skateboard/pom.xml
@@ -59,8 +59,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-test</artifactId> 
-			<scope>test</scope> </dependency> -->
+		<dependency> <groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-test</artifactId> 
+			<scope>test</scope> 
+		</dependency> 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
